--- a/analysis_data.ipynb
+++ b/analysis_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -31,150 +31,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache /tmp/jieba.cache\n",
-      "Loading model cost 0.479 seconds.\n",
-      "Prefix dict has been built succesfully.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shorten content, accuracy: 0.9674\n",
-      "max length: 300\n",
-      "min length: 2\n",
-      "mean length:180\n",
-      "median length:175\n"
-     ]
-    }
-   ],
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "df= organize_data(config.train_data)\n",
-    "df = deal_data(df)\n",
     "df = df.sample(5000)\n",
-    "df = shorten_content_all(df, config.max_len)"
+    "df = deal_data(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.requires_grad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shorten content, accuracy: 0.9618\n",
-      "max length: 300\n",
+      "shorten content, accuracy: 0.9722\n",
+      "max length: 499\n",
       "min length: 2\n",
-      "mean length:189\n",
-      "median length:185\n"
+      "mean length:242\n",
+      "median length:225\n",
+      "answer generation accuracy(all): 0.9747\n",
+      "wrong split: 0.0259\n",
+      "answer duplicate: 0.0000\n"
      ]
     }
    ],
    "source": [
-    "df= organize_data(config.train_data)\n",
-    "df = deal_data(df)\n",
-    "df = df.sample(5000)\n",
-    "df = shorten_content_fix(df, config.max_len)"
+    "df_1 = shorten_content_all(df, 500)\n",
+    "df_1 = build_answer_range(df_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded succeed\n"
+      "shorten content, accuracy: 0.9722\n",
+      "max length: 499\n",
+      "min length: 2\n",
+      "mean length:242\n",
+      "median length:225\n",
+      "answer generation accuracy(all): 0.9747\n",
+      "wrong split: 0.0259\n",
+      "answer duplicate: 0.0000\n"
      ]
     }
    ],
    "source": [
-    "import thulac\n",
-    "thu1 = thulac.thulac(seg_only=True)"
+    "df_2 = shorten_content_fix(df, 500)\n",
+    "df_2 = build_answer_range_fix(df_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def cut(string):\n",
-    "    tmp = thu1.cut(string)\n",
-    "    a, b = zip(*tmp)\n",
-    "    return a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def shorten_content_fix(df, max_len):\n",
+    "def shorten_content_all(df, max_len):\n",
     "    \"\"\"\n",
     "    :param df:\n",
     "    :param max_len:\n",
@@ -204,10 +130,10 @@
     "            if c not in ['', ' ', '  ']:\n",
     "                temp.append(c)\n",
     "        content_list = temp\n",
-    "        content_list = [cut(c) for c in content_list]\n",
+    "        content_list = [jieba.lcut(c, HMM=False) for c in content_list]\n",
     "        content_len = len(content_list)\n",
     "\n",
-    "        question_str = ' '.join(cut(question))\n",
+    "        question_str = ' '.join(jieba.lcut(question, HMM=False))\n",
     "\n",
     "        # 相似性得分: rouge-l\n",
     "        scores = []\n",
@@ -221,7 +147,7 @@
     "\n",
     "        # 标记类型\n",
     "        flag = np.zeros(content_len)\n",
-    "        title_number = len(cut(title))\n",
+    "        title_number = len(jieba.lcut(title, HMM=False))\n",
     "        max_len = max_len - title_number\n",
     "        flag_result = flag.copy()\n",
     "\n",
@@ -234,22 +160,10 @@
     "        if number <= max_len:\n",
     "            flag_result = flag.copy()\n",
     "        else:\n",
-    "            question_set = set(jieba.lcut(question, cut_all=True))\n",
-    "            for j in range(content_len):\n",
-    "                if flag[j] == -1:\n",
-    "                    c = ''.join(content_list[j])\n",
-    "                    c_set = set(jieba.lcut(c, cut_all=True))\n",
-    "                    s = len(c_set & question_set)\n",
-    "                    flag[j] = s\n",
-    "            max_s = max(flag)\n",
-    "            for j in range(content_len):\n",
-    "                if flag[j] == max_s:\n",
-    "                    flag_result[j] = -1\n",
-    "\n",
     "            temp = []\n",
     "            c = 0\n",
     "            for j in range(content_len):\n",
-    "                if flag_result[j] == -1:\n",
+    "                if flag[j] == -1:\n",
     "                    c += len(content_list[j]) + 1\n",
     "                    if c > max_len:\n",
     "                        break\n",
@@ -327,8 +241,24 @@
     "        # 核心句上上句\n",
     "        if number < max_len:\n",
     "            for i in range(content_len):\n",
-    "                if (flag[i] == -1) and (i-2 >= 0) and (flag[i-1] == 0):\n",
+    "                if (flag[i] == -1) and (i-2 >= 0) and (flag[i-2] == 0):\n",
     "                    flag[i-2] = -9\n",
+    "            number = count(flag, content_list)\n",
+    "            if number < max_len:\n",
+    "                flag_result = flag.copy()\n",
+    "\n",
+    "        # 倒数第二句\n",
+    "        if number < max_len:\n",
+    "            if(len(flag) >= 2) and (flag[-2] == 0):\n",
+    "                flag[-2] = -10\n",
+    "            number = count(flag, content_list)\n",
+    "            if number < max_len:\n",
+    "                flag_result = flag.copy()\n",
+    "\n",
+    "        # 第二句\n",
+    "        if number < max_len:\n",
+    "            if (len(flag) >= 2) and (flag[1] == 0):\n",
+    "                flag[1] = -11\n",
     "            number = count(flag, content_list)\n",
     "            if number < max_len:\n",
     "                flag_result = flag.copy()\n",
@@ -361,7 +291,7 @@
     "        df['is_in'] = is_in\n",
     "        print('shorten content, accuracy: %.4f' % (sum(is_in)/len(df)))\n",
     "\n",
-    "    merge_len = [len(cut(m)) for m in merge]\n",
+    "    merge_len = [len(jieba.lcut(m, HMM=False)) for m in merge]\n",
     "    df['len'] = merge_len\n",
     "    print('max length: %d' % max(merge_len))\n",
     "    print('min length: %d' % min(merge_len))\n",
@@ -373,12 +303,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def build_answer_range_fix(df):\n",
+    "    sys.setrecursionlimit(1000000)\n",
+    "    rouge = Rouge(metrics=['rouge-l'])\n",
+    "\n",
+    "    def match(merge, answer, question):\n",
+    "        merge_list = jieba.lcut(merge, HMM=False)\n",
+    "        merge_len = len(merge_list)\n",
+    "        answer_list = jieba.lcut(answer, HMM=False)\n",
+    "        answer_len = len(answer_list)\n",
+    "        question_str = ' '.join(jieba.lcut(question, HMM=False))\n",
+    "        start = []\n",
+    "        end = []\n",
+    "        if answer == '':\n",
+    "            return -1, -1\n",
+    "        for i in range(0, merge_len-answer_len+1):\n",
+    "            if merge_list[i: i+answer_len] == answer_list:\n",
+    "                start.append(i)\n",
+    "                end.append(i+answer_len-1)\n",
+    "        if len(start) == 0:\n",
+    "            return -1, -1\n",
+    "        elif len(start) == 1:\n",
+    "            return start[0], end[0]\n",
+    "        else:\n",
+    "            scores = []\n",
+    "            # 前后扩展5个词\n",
+    "            for s, e in zip(start, end):\n",
+    "                s = max(s-5, 0)\n",
+    "                answer_can = ' '.join(merge_list[s: e+5])\n",
+    "                score = rouge.get_scores(answer_can, question_str, avg=True)['rouge-l']['r']\n",
+    "                scores.append(score)\n",
+    "            max_idx = np.argmax(scores)\n",
+    "            return start[max_idx], end[max_idx]\n",
+    "\n",
+    "    merges = df[df['is_in']]['merge'].values\n",
+    "    answers = df[df['is_in']]['answer'].values\n",
+    "    questions = df[df['is_in']]['question'].values\n",
+    "    answer_range = [match(m, a, q) for m, a, q in zip(merges, answers, questions)]\n",
+    "\n",
+    "    start, end = list(zip(*answer_range))\n",
+    "    df.loc[df['is_in'], 'answer_start'] = start\n",
+    "    df.loc[df['is_in'], 'answer_end'] = end\n",
+    "\n",
+    "    merge_len = len(merges)\n",
+    "    right_all_len = (df['answer_end'] >= 0).sum()\n",
+    "    wrong_split_len = (df['answer_end'] == -1).sum()\n",
+    "    wrong_dup_len = (df['answer_end'] == -2).sum()\n",
+    "    print('answer generation accuracy(all): %.4f' % (right_all_len/merge_len))\n",
+    "    print('wrong split: %.4f' % (wrong_split_len/merge_len))\n",
+    "    print('answer duplicate: %.4f' % (wrong_dup_len/merge_len))\n",
+    "\n",
+    "    return df"
+   ]
   },
   {
    "cell_type": "code",
@@ -387,7 +369,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "1"
+   ]
   }
  ],
  "metadata": {
