--- a/analysis_data.ipynb
+++ b/analysis_data.ipynb
@@ -2,439 +2,280 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def _rouge_score(start_y, end_y, start_pred, end_pred, gamma):\n",
-    "    \"\"\" 计算某一条记录的rouge \"\"\"\n",
-    "    start = max(start_y, start_pred)\n",
-    "    end = min(end_y, end_pred)\n",
-    "\n",
-    "    interval = end - start + 1\n",
-    "    if interval <= 0:\n",
-    "        return 0\n",
-    "    else:\n",
-    "        length_pred = end_pred - start_pred + 1\n",
-    "        length_y = end_y - start_y + 1\n",
-    "        prec = interval / length_pred if length_pred > 0 else 0\n",
-    "        rec = interval / length_y if length_y >0 else 0\n",
-    "\n",
-    "        if prec !=0 and rec != 0:\n",
-    "            score = ((1 + gamma**2) * prec * rec) / (rec + gamma**2 * prec)\n",
-    "        else:\n",
-    "            score = 0\n",
-    "        return score"
+    "import torch\n",
+    "from torch import nn \n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "start_y = 4\n",
-    "end_y = 5\n",
-    "\n",
-    "start_pred = 4\n",
-    "end_pred = 5\n",
-    "_rouge_score(start_y, end_y, start_pred, end_pred, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "range(2, 5)"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "range(2, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a = torch.Tensor([1, 2, 3])"
+    "class PosEncoder(nn.Module):\n",
+    "    def __init__(self, length, hidden_size):\n",
+    "        super(PosEncoder, self).__init__()\n",
+    "        freqs = torch.Tensor(\n",
+    "            [10000 ** (-i / hidden_size) if i % 2 == 0 else -10000 ** ((1 - i) / hidden_size) for i in range(hidden_size)])\n",
+    "        freqs = freqs.unsqueeze(1)\n",
+    "        phases = torch.Tensor([0 if i % 2 == 0 else math.pi / 2 for i in range(hidden_size)])\n",
+    "        phases = phases.unsqueeze(1)\n",
+    "        pos = torch.arange(length).repeat(hidden_size, 1)\n",
+    "        self.pos_encoding = nn.Parameter(torch.sin(pos*freqs + phases), requires_grad=False)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        :param x: (batch_size, d, c_len)\n",
+    "        :return: (batch_size, d, c_len)\n",
+    "        \"\"\"\n",
+    "        x = x + self.pos_encoding\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.,  1.,  2.],\n",
-       "        [ 0.,  1.,  2.]])"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a = torch.stack([torch.arange(3), torch.arange(3)])\n",
-    "a"
+    "a = torch.empty(128, 20)\n",
+    "nn.init.xavier_uniform_(a)\n",
+    "a = nn.Parameter(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = torch.ones(4, 20, 128)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 0.,  0.,  0.],\n",
-       "         [ 1.,  1.,  1.],\n",
-       "         [ 2.,  2.,  2.]],\n",
+       "tensor([[[ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         ...,\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322]],\n",
        "\n",
-       "        [[ 0.,  0.,  0.],\n",
-       "         [ 1.,  1.,  1.],\n",
-       "         [ 2.,  2.,  2.]]])"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.unsqueeze(2).expand(2, 3, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 0.,  1.,  2.],\n",
-       "         [ 0.,  1.,  2.],\n",
-       "         [ 0.,  1.,  2.]],\n",
+       "        [[ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         ...,\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322]],\n",
        "\n",
-       "        [[ 0.,  1.,  2.],\n",
-       "         [ 0.,  1.,  2.],\n",
-       "         [ 0.,  1.,  2.]]])"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.unsqueeze(1).expand(2, 3, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 0.,  1.,  2.],\n",
-       "         [-1.,  0.,  1.],\n",
-       "         [-2., -1.,  0.]],\n",
+       "        [[ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         ...,\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322]],\n",
        "\n",
-       "        [[ 0.,  1.,  2.],\n",
-       "         [-1.,  0.,  1.],\n",
-       "         [-2., -1.,  0.]]])"
+       "        [[ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         ...,\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322],\n",
+       "         [ 2.5091, -1.9933, -2.3790,  ..., -0.4085, -0.3303, -1.5322]]])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.unsqueeze(1).expand(2, 3, 3) - a.unsqueeze(2).expand(2, 3, 3) "
+    "torch.matmul(x, a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 3.],\n",
-       "        [ 2.]])"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b = torch.Tensor([3,2]).view(-1, 1)\n",
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 1.,  2.,  2.],\n",
-       "        [ 4.,  5.,  1.]])"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = torch.Tensor([[1,2,2], [4,5,1]])\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "invalid argument 2: k not in range for dimension at /opt/conda/conda-bld/pytorch_1525909934016/work/aten/src/TH/generic/THTensorMath.c:3439",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-112-fa4abbf83921>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtopk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m: invalid argument 2: k not in range for dimension at /opt/conda/conda-bld/pytorch_1525909934016/work/aten/src/TH/generic/THTensorMath.c:3439"
-     ]
-    }
-   ],
-   "source": [
-    "torch.topk(a, k=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 1.,  2.,  2.],\n",
-       "        [ 4.,  5.,  1.]])"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 1.,  2.,  2.],\n",
-       "         [ 1.,  2.,  2.],\n",
-       "         [ 1.,  2.,  2.]],\n",
+       "tensor([[[ 1.,  1.,  1.,  1.],\n",
+       "         [ 1.,  1.,  1.,  1.]],\n",
        "\n",
-       "        [[ 4.,  5.,  1.],\n",
-       "         [ 4.,  5.,  1.],\n",
-       "         [ 4.,  5.,  1.]]])"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.unsqueeze(1).expand(2, 3,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 1.,  1.,  1.],\n",
-       "         [ 2.,  2.,  2.],\n",
-       "         [ 2.,  2.,  2.]],\n",
+       "        [[ 1.,  1.,  1.,  1.],\n",
+       "         [ 1.,  1.,  1.,  1.]],\n",
        "\n",
-       "        [[ 4.,  4.,  4.],\n",
-       "         [ 5.,  5.,  5.],\n",
-       "         [ 1.,  1.,  1.]]])"
+       "        [[ 1.,  1.,  1.,  1.],\n",
+       "         [ 1.,  1.,  1.,  1.]]])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.unsqueeze(2).expand(2,3,3)"
+    "a = torch.zeros(2, 4)\n",
+    "b = torch.ones(3, 2, 4)\n",
+    "a + b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 3.],\n",
-       "        [ 2.]])"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b"
-   ]
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 3.,  3.,  3.],\n",
-       "         [ 3.,  3.,  3.],\n",
-       "         [ 3.,  3.,  3.]],\n",
-       "\n",
-       "        [[ 2.,  2.,  2.],\n",
-       "         [ 2.,  2.,  2.],\n",
-       "         [ 2.,  2.,  2.]]])"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.unsqueeze(2).expand(2,3,3)"
-   ]
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 3.,  3.,  3.],\n",
-       "         [ 3.,  3.,  3.],\n",
-       "         [ 3.,  3.,  3.]],\n",
-       "\n",
-       "        [[ 2.,  2.,  2.],\n",
-       "         [ 2.,  2.,  2.],\n",
-       "         [ 2.,  2.,  2.]]])"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.unsqueeze(1).expand(2,3,3)"
-   ]
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 3.,  2.])"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.sum(b, dim=1)"
-   ]
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 1.,  2.,  3.])"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
