--- a/test.ipynb
+++ b/test.ipynb
@@ -15,6 +15,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.Tensor([[-2.3543e+00, -9.5574e+00,  3.2396e+01,  1.0000e-30,\n",
+    "          1.0000e-30,  1.0000e-30],\n",
+    "        [-5.7400e+00, -3.9120e+01, -1.2789e+01,   1.0000e-30,\n",
+    "          1.0000e-30,  1.0000e-30],\n",
+    "        [ 6.5512e+00,  1.3471e+01, -1.8644e+01,   1.0000e-30,\n",
+    "          1.0000e-30,  1.0000e-30]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 8.0935e-16,  6.0238e-19,  1.0000e+00,  8.5231e-15,  8.5231e-15,\n",
+       "          8.5231e-15],\n",
+       "        [ 1.0704e-03,  3.4105e-18,  9.2944e-07,  3.3298e-01,  3.3298e-01,\n",
+       "          3.3298e-01],\n",
+       "        [ 9.8705e-04,  9.9901e-01,  1.1277e-14,  1.4099e-06,  1.4099e-06,\n",
+       "          1.4099e-06]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.softmax(a,dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
