--- a/analysis_data.ipynb
+++ b/analysis_data.ipynb
@@ -9,84 +9,72 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "from torch import nn\n",
     "from torch.nn import functional as f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "a = [-float('inf'), -float('inf'), -float('inf'), -float('inf')]\n",
-    "a = torch.Tensor(a)"
+    "a = torch.tensor(3)\n",
+    "a = nn.Parameter(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/xy/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:1: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "tensor([nan., nan., nan., nan.])"
+       "torch.Size([1, 10])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.softmax(a)"
+    "a = torch.Tensor([[ 0.0000,  0.2849,  0.3237,   -float('inf'),    -float('inf'),    -float('inf'),    -float('inf'),    -float('inf'),    -float('inf'),\n",
+    "           -float('inf')]])\n",
+    "a.size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.2694,  0.3582,  0.3724,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "          0.0000,  0.0000,  0.0000]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.softmax(a, dim=1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "if a:\n",
+    "    print(3)"
+   ]
   }
  ],
  "metadata": {
